Add developer doc to run and test